--- a/coming_soon.html
+++ b/coming_soon.html
@@ -136,6 +136,7 @@
             margin-bottom: 1.5rem;
             display: inline-block;
             background: linear-gradient(135deg, #00d2ff, #ff00cc);
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             animation: pulse 3s infinite;
@@ -162,6 +163,7 @@
             letter-spacing: -1px;
             line-height: 1.1;
             background: linear-gradient(to right, #fff, #b3b3b3);
+            background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
