--- a/index.html
+++ b/index.html
@@ -130,16 +130,19 @@
             }
         }
 
-        /* Logo / Icon Area */
-        .brand-icon {
-            font-size: 3rem;
+        /* Logo Image */
+        .brand-logo-container {
             margin-bottom: 1.5rem;
-            display: inline-block;
-            background: linear-gradient(135deg, #00d2ff, #ff00cc);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
             animation: pulse 3s infinite;
+        }
+
+        .brand-logo {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 0 20px rgba(0, 210, 255, 0.3);
+            object-fit: cover;
         }
 
         @keyframes pulse {
@@ -175,59 +178,7 @@
             line-height: 1.6;
         }
 
-        /* Subscription Form */
-        .input-group {
-            position: relative;
-            display: flex;
-            gap: 10px;
-            background: rgba(0, 0, 0, 0.2);
-            padding: 5px;
-            border-radius: 50px;
-            border: 1px solid rgba(255, 255, 255, 0.05);
-            transition: all 0.3s ease;
-        }
 
-        .input-group:focus-within {
-            border-color: rgba(255, 255, 255, 0.3);
-            box-shadow: 0 0 15px rgba(0, 210, 255, 0.2);
-        }
-
-        input[type="email"] {
-            flex: 1;
-            background: transparent;
-            border: none;
-            padding: 15px 20px;
-            color: white;
-            font-family: inherit;
-            font-size: 1rem;
-            outline: none;
-        }
-
-        input[type="email"]::placeholder {
-            color: rgba(255, 255, 255, 0.4);
-        }
-
-        button {
-            background: linear-gradient(135deg, #00d2ff 0%, #3a7bd5 100%);
-            border: none;
-            padding: 12px 30px;
-            border-radius: 40px;
-            color: white;
-            font-weight: 600;
-            font-family: inherit;
-            cursor: pointer;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-            white-space: nowrap;
-        }
-
-        button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0, 210, 255, 0.4);
-        }
-
-        button:active {
-            transform: translateY(0);
-        }
 
         /* Footer / Status */
         .status-badge {
@@ -263,59 +214,6 @@
                 opacity: 0.4;
             }
         }
-
-        /* Success Message */
-        .success-message {
-            display: none;
-            color: #00ff88;
-            margin-top: 1rem;
-            font-size: 0.95rem;
-            animation: fadeIn 0.5s ease;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(-5px);
-            }
-
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        /* Responsive */
-        @media (max-width: 480px) {
-            .container {
-                padding: 2rem;
-                width: 95%;
-            }
-
-            h1 {
-                font-size: 2.2rem;
-            }
-
-            .input-group {
-                flex-direction: column;
-                background: transparent;
-                border: none;
-                gap: 15px;
-            }
-
-            input[type="email"] {
-                background: rgba(0, 0, 0, 0.2);
-                border-radius: 12px;
-                border: 1px solid rgba(255, 255, 255, 0.1);
-                text-align: center;
-            }
-
-            button {
-                width: 100%;
-                padding: 16px;
-                border-radius: 12px;
-            }
-        }
     </style>
 </head>
 
@@ -329,36 +227,21 @@
     <!-- Main Content Card -->
     <div class="container">
         <!-- Icon -->
-        <div class="brand-icon">
-            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path d="M9 18V5l12-2v13"></path>
-                <circle cx="6" cy="18" r="3"></circle>
-                <circle cx="18" cy="16" r="3"></circle>
-            </svg>
+        <!-- Icon with Logo 512 -->
+        <div class="brand-logo-container">
+            <img src="assets/logo-512.png" alt="MTUNE Logo" class="brand-logo">
         </div>
 
-        <h1>We're Upgrading</h1>
+        <h1>System Update</h1>
         <p>
-            MTUNE is undergoing a major transformation to ensure maximum safety and performance.
-            We'll be back online with a brand new experience very soon.
+            We are currently fixing critical security errors to ensure your safety.
+            MTUNE will be back online shortly. Thank you for your patience.
         </p>
-
-        <!-- Notify Form -->
-        <form id="notifyForm" onsubmit="handleSubmit(event)">
-            <div class="input-group">
-                <input type="email" id="email" placeholder="Enter your email for updates" required>
-                <button type="submit">Notify Me</button>
-            </div>
-        </form>
-        <div class="success-message" id="successMsg">
-            Thanks! We'll keep you posted.
-        </div>
 
         <!-- Status Pill -->
         <div class="status-badge">
             <span class="status-dot"></span>
-            System Upgrades in Progress
+            Security Fixes in Progress
         </div>
     </div>
 
